logs/canoe.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/canoe'...
Listing './lib/python3.5/site-packages/canoe/config'...
Compiling './lib/python3.5/site-packages/canoe/config/ast.py'...
***   File "./lib/python3.5/site-packages/canoe/config/ast.py", line 98
    print "Creating value node: ", value
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/canoe/config/lex.py'...
***   File "./lib/python3.5/site-packages/canoe/config/lex.py", line 71
    print "Illegal character '%s' on line %d, position %d." % \
                                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/canoe/config/parser.py'...
***   File "./lib/python3.5/site-packages/canoe/config/parser.py", line 10
    print "Config"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/canoe/filters'...
Listing './lib/python3.5/site-packages/canoe/routes'...
Compiling './lib/python3.5/site-packages/canoe/routes/simple.py'...
***   File "./lib/python3.5/site-packages/canoe/routes/simple.py", line 13
    print "%s%s" % (self._prefix, line)
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/canoe-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
